--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Linky",
-  "name": "Linky - Save Dem Links!",
+  "short_name": "Linkye",
+  "name": "Linkye - Save Dem Links!",
   "icons": [
     {
       "src": "favicon.ico",
